# cmake-example-repo

./: .gitignore  CMakeLists.txt  README.md  example_test.cpp  unix_stylecheck.sh
.github/workflows/: ci-cmake-tests.yml  ci-cmake_tests.yml  ci-cpp-style-check.yml
example_hw/: CMakeLists.txt  h1.cpp  h1.h  hw1_tests.cpp
